@@ -4,6 +4,8 @@
   the udev magic and added a troubleshooting note in INSTALL. cgps
   now displays epx/epy rather than eph. Speed is now always reported 
   if our last two fixes were good, even if the GPs didn't compute it.
+  Reading packets from UDP datagrams by specifying a listening address
+  and port is now supported.
 
 * Tue Apr 20 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.94
   Error-checking in the 50bps subframe code has been greatly improved.
